reserve pages responsive

--- a/src/app/equipment-reserve-success/equipment.reserve-success.html
+++ b/src/app/equipment-reserve-success/equipment.reserve-success.html
@@ -3,23 +3,23 @@
   <article class="main-cantain">
     <div class="container">
       <!-- START  Request Confirmation -->
-      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 sell-main-part">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 req_job_tit nopadding">Request Confirmation</div>
+      <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 sell-main-part">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 req_job_tit nopadding reserve-success-heading">Request Confirmation</div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding">
           <button type="button" class="btn btn-default print_btn">Print Order Details</button>
         </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_mar">
-          <p class="theme_clr">
+          <p class="theme_clr reserve-success-heading">
             Thank You. Your (request) has been received and we have sent you a copy of this
             request on your email address
           </p>
-          <p class="comferm_email_tex">
+          <p class="comferm_email_tex reserve-success-heading">
             A confirmation email will be sent you once your (request) is processed.
           </p>
           <hr class="req_dash_botam">
-          <h3 class="req_job_tit">Order Details</h3>
-          <table class="table req_tab">
+          <h3 class="req_job_tit reserve-success-heading">Order Details</h3>
+          <table class="table req_tab reserve-success-heading">
 
             <tbody>
             <tr>
@@ -55,21 +55,21 @@
             </tbody>
           </table>
           <hr class="req_dash_botam">
-          <h3 class="req_job_tit">Payments</h3>
-          <p class="comferm_email_tex">
+          <h3 class="req_job_tit reserve-success-heading">Payments</h3>
+          <p class="comferm_email_tex reserve-success-heading">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
           </p>
-          <p class="theme_clr">
+          <p class="theme_clr reserve-success-heading">
             Payment is made by E-check (ACH)
           </p>
           <hr class="req_dash_botam">
-          <h3 class="req_job_tit">Track Request Status</h3>
-          <p class="comferm_email_tex">
+          <h3 class="req_job_tit reserve-success-heading">Track Request Status</h3>
+          <p class="comferm_email_tex reserve-success-heading">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
           </p>
-          <p class="theme_clr">
+          <p class="theme_clr reserve-success-heading">
             Track Here
           </p>
           <hr class="req_dash_botam">
