--- a/src/app/portal-access/portal-access.html
+++ b/src/app/portal-access/portal-access.html
@@ -1,70 +1,83 @@
 <section>
+  <div class="portal-access-header">
+    <div class="container">
+      <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h3>Account Access</h3>
+            <span class="deactive-link">HOME /</span>
+            <span class="deactive-link"> DASHBOARD /</span>
+            <span class="active-link"> ACCOUNT ACCESS</span>
+          </div>
+        </div>
+    </div>
+  </div>
   <!-- START  Main Content -->
   <article class="main-cantain">
     <div class="container">
-      <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+      <div class="row">
+        <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+          <h3 class="portal-access">Don't have full access?</h3>
+          <p><a target="_blank" href="https://na2.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=44529d52-2355-45d7-bb7f-21532a9fa491">Click here</a> now to fill out our credit application. As a member, you'll receive discounts on rentals up to
 
-        <h3>Don't have full access?</h3>
-        <p><a target="_blank" href="https://na2.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=44529d52-2355-45d7-bb7f-21532a9fa491">Click here</a> now to fill out our credit application. As a member, you'll receive discounts on rentals up to
+            60% OFF when compared with other rental companies. You will enjoy 24/7 access to premium on-
 
-          60% OFF when compared with other rental companies. You will enjoy 24/7 access to premium on-
+            demand account management services that Noble Iron offers, including access to these awesome
 
-          demand account management services that Noble Iron offers, including access to these awesome
+            benefits:</p>
+          <ul style="padding-left: 40px; list-style-type: disc;">
+            <li>Access and generate real-time quotes</li>
 
-          benefits:</p>
-        <ul>
-          <li>Access and generate real-time quotes</li>
+            <li> Create &amp; manage reservations and off-rent any equipment in seconds
+            </li>
+            <li>Manage job sites</li>
 
-          <li> Create &amp; manage reservations and off-rent any equipment in seconds
-          </li>
-          <li>Manage job sites</li>
+            <li>Pay online using ACH (e-check) or credit card</li>
 
-          <li>Pay online using ACH (e-check) or credit card</li>
+            <li>Access contracts, invoices and much more</li>
+          </ul>
 
-          <li>Access contracts, invoices and much more</li>
-        </ul>
+          <p>Got questions? Our Rental Experts and Customer Experience Managers will be delighted to answer any questions you may have.</p>
+          <adress>
+            <h5 class="portal-access">Contact us:</h5>
 
-        <p>Got questions? Our Rental Experts and Customer Experience Managers will be delighted to answer any questions you may have.</p>
-        <adress>
-          <h5>Contact us:</h5>
+            <span class="portal-access">Phone:</span> <a href="tel:1-855-767-4424" class="portal-contact">1-855-767-4424</a><br>
 
-          Phone: <a href="tel:1-855-767-4424">1-855-767-4424</a><br>
+            <a title="Request a call back" href="/#/request-callback" class="portal-contact">Request Call Back</a><br>
 
-          <a title="Request a call back" href="/#/request-callback">Request Call Back</a><br>
-
-          Email: <a href="mailto:customercare@nobleiron.com">customercare@nobleiron.com</a>
+            <span class="portal-access">Email:</span> <a href="mailto:customercare@nobleiron.com" class="portal-contact">customercare@nobleiron.com</a>
 
 
 
-        </adress>
+          </adress>
+        </div>
+        <!-- START  LOGIN/REGISTER TAB -->
+        <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page">
+
+          <h3 class= "portal-access">Already have a credit account with us?</h3>
+          <p>If you already have an open credit account with Noble Iron, please contact us in order to receive the
+            following credentials to have full access to all our features. </p>
+          <p> Give us a call at <a href="tel:1-855-767-4424" class="portal-contact">1-855-767-4424</a>
+            <br>Or email our direct online customer experience manager at <a href="mailto:brian.flores@nobleiron.com" class="portal-contact">brian.flores@nobleiron.com</a></p>
+
+          <form role="form" name="loginForm" novalidate valdr-type="User">
+            <div class="form-group" valdr-form-group>
+              <input type="hidden" id="credentials" name="credentials" ng-model="loginData.credentials" />
+            </div>
+            <div class="form-group" valdr-form-group>
+              <label>Portal Username</label>
+              <input type="text" class="form-control" autocomplete="off" ng-required="true" name="email" ng-model="loginData.email">
+            </div>
+            <div class="form-group" valdr-form-group>
+              <label>Portal Password</label>
+              <input type="password" class="form-control"  autocomplete="off" ng-required="true" name="password" ng-model="loginData.password">
+            </div>
+            <div class="form-group">
+              <input type="submit" type="submit" ng-click="portalLogin()" value="Update" class="btn btn-primary">
+            </div>
+          </form>
+        </div>
+        <!-- End  LOGIN/REGISTER TAB -->
       </div>
-      <!-- START  LOGIN/REGISTER TAB -->
-      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page">
-
-        <h3>Already have a credit account with us?</h3>
-        <p>If you already have an open credit account with Noble Iron, please contact us in order to receive the
-          following credentials to have full access to all our features. </p>
-        <p> Give us a call at <a href="tel:1-855-767-4424">1-855-767-4424</a>
-          <br>Or email our direct online customer experience manager at <a href="mailto:brian.flores@nobleiron.com">brian.flores@nobleiron.com</a></p>
-
-        <form role="form" name="loginForm" novalidate valdr-type="User">
-          <div class="form-group" valdr-form-group>
-            <input type="hidden" id="credentials" name="credentials" ng-model="loginData.credentials" />
-          </div>
-          <div class="form-group" valdr-form-group>
-            <label>Portal Username</label>
-            <input type="text" class="form-control" autocomplete="off" ng-required="true" name="email" ng-model="loginData.email">
-          </div>
-          <div class="form-group" valdr-form-group>
-            <label>Portal Password</label>
-            <input type="password" class="form-control"  autocomplete="off" ng-required="true" name="password" ng-model="loginData.password">
-          </div>
-          <div class="form-group">
-            <input type="submit" type="submit" ng-click="portalLogin()" value="Update" class="btn btn-primary">
-          </div>
-        </form>
-      </div>
-      <!-- End  LOGIN/REGISTER TAB -->
     </div>
   </article>
 
