portal access page

--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -51,7 +51,7 @@
                          ng-required="true" placeholder="Enter email">
                 </div>
                 <a href="#/login" class="btn btn-default pull-right" style="margin-left: 10px;">Cancel</a>
-                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-success pull-right">Submit</button>
+                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-default sign_mybtn pull-right">Submit</button>
               </form>
             </div>
             <div ng-show="flags.forgotPasswordNotifyInitiated">
