forgot password color scheme and header on landing page is working now

--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -50,8 +50,8 @@
                   <input type="email" autocomplete="off" class="form-control" ng-model="forgotPasswordData.email" name="email"
                          ng-required="true" placeholder="Enter email">
                 </div>
-                <a href="#/login" class="btn btn-default pull-right" style="margin-left: 10px;">Cancel</a>
-                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-default sign_mybtn pull-right">Submit</button>
+                <a href="#/login" class="btn btn-default pull-right" style="margin-left: 10px; padding: 8px 10px;">Cancel</a>
+                <button type="submit" ng-click="notifyForgotPassword()" class="btn btn-default sign_mybtn pull-right" style="width: auto;">Submit</button>
               </form>
             </div>
             <div ng-show="flags.forgotPasswordNotifyInitiated">
@@ -66,8 +66,5 @@
       <!-- End  LOGIN/REGISTER TAB -->
     </div>
   </article>
-
   <!-- End  Main Content -->
-
-
 </section>
