--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -192,7 +192,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="row" ng-if="!flags.gridView">
+                <div class="row" ng-if="!flags.gridView" style="margin:0;">
                   <div class="col-md-12"><hr class="dash"></div>
                   <div class="col-md-12 col-sm-6 col-xs-12 list-product" ng-repeat="item in results">
                     <div class="col-md-3 lift-list">
