--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -79,7 +79,7 @@
 
           <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
             <ul class="nav nav-tabs gride-tab">
-              <li ng-class="{'active': selectedRootCategory.Name == category.Name}" ng-repeat="category in rootCategories | orderBy:'categoryDisplaySortOrder'"><a data-toggle="tab" href="#equpment">{{category.Name}}</a></li>
+              <li ng-click="selectRootCategory(category)" ng-class="{'active': selectedRootCategory.Name == category.Name}" ng-repeat="category in rootCategories | orderBy:'categoryDisplaySortOrder'"><a data-toggle="tab" href="#equpment">{{category.Name}}</a></li>
             </ul>
 
 
