--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -3,10 +3,12 @@
     <div class="container">
       <div class="row">
         <!--<h4>User Profile Page</h4>-->
-        <div class="panel panel-default">
-          <div class="panel-heading">User Profile Page</div>
-          <div class="panel-body">
-
+        <tabset>
+          <!--<tab heading="Static title">Profile</tab>-->
+          <tab select="alertMe()">
+            <tab-heading>
+              <i class="glyphicon glyphicon-bell"></i> Profile
+            </tab-heading>
             <form class="form-horizontal">
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">First Name</label>
@@ -56,8 +58,39 @@
                 </div>
               </div>
             </form>
-          </div>
-        </div>
+          </tab>
+          <tab select="alertMe()">
+            <tab-heading>
+              <i class="glyphicon glyphicon-bell"></i> Change Password
+            </tab-heading>
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" readonly="true" disabled="disabled" id="inputEmail3" placeholder="Email">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="inputPassword3" placeholder="Password">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Confirm Password</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="inputPassword3" placeholder="Password">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-default">Update</button>
+                </div>
+              </div>
+            </form>
+
+          </tab>
+        </tabset>
         {{userDetails | json}}
       </div>
     </div>
