portal access page button search header issues grid view hide in mobile

--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -77,19 +77,18 @@
         <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding">
           <!-- START  Equipment Tab -->
 
-          <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+          <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
             <ul class="nav nav-tabs gride-tab">
               <li ng-click="selectRootCategory(category)" ng-class="{'active': selectedRootCategory.Name == category.Name}" ng-repeat="category in rootCategories | orderBy:'categoryDisplaySortOrder'"><a data-toggle="tab" href="#equpment">{{category.Name}}</a></li>
             </ul>
 
 
           </div>
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+          <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 visible-md visible-lg">
             <div class="list-grid">
               <ul>
                 <li><a ng-click="toggleGridView(false)"> <i class="fa fa-bars fa-2x"></i></a></li>
                 <li><a ng-click="toggleGridView(true)"><i class="fa fa-th fa-2x"></i></a></li>
-
               </ul>
             </div>
           </div>
