--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -1,4 +1,4 @@
-<div class="modal-content">
+<div class="modal-content" style="box-shadow: none; border: none;">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" ng-click="$dismiss()">×</button>
     <h4 class="modal-title">Reserve this Equipment</h4>
