--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -51,8 +51,8 @@
           </ul>
         </div>
         <div class="btn-group drop-btn profile-dropdown" dropdown >
-          <button class="btn btn-mini my-alc-btn"><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}</button>
-          <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle" id="single-button" dropdown-toggle>
+          <button class="btn btn-mini my-alc-btn" style="padding: 0; outline: none;"><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}</button>
+          <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle" id="single-button" dropdown-toggle style="box-shadow: none;">
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu"  role="menu" ng-if="userObj">
