--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -987,3 +987,16 @@ a:focus { color: #0099cc;
   color: #fff;
 }
 
+.change-pass {
+  font-size: 15px;
+  margin-top: 8px;
+}
+
+.prof-form h4 {
+  font-size: 16px;
+}
+
+.prof-form .form-control {
+  margin-bottom: 15px;
+}
+
