no search result page ui fixes

--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -288,7 +288,7 @@
                     </div>
                   </div>
                   <div class="col-md-6 col2 col3" style="padding-top:0;">
-                    <div class="form-control form-left" style="height: 38px;">
+                    <div class="form-control form-left" style="height: 38px; margin-bottom: 10px;">
                       <p class="pull-left">From</p>
                       <input type="text" placeholder="dd/mm/yy">
                       <img src="assets/images/calendar.png" class="pull-right">
